# twilio-microvisor-freertos

./: .gitignore  CMakeLists.txt  toolchain.cmake
Config/: app_azure_rtos_config.h  stm32u5xx_hal_conf.h
Demo/: CMakeLists.txt
Demo/Inc/: app_azure_rtos.h  app_threadx.h  console.h  stm32u5xx_it.h
Demo/Src/: app_azure_rtos.c  app_threadx.c  main.c  stm32u5xx_it.c  usart.c
Qube/: CMakeLists.txt
Qube/Inc/: NMEA.h  app_threadx.h  console.h  debug_menu_strings_en.h  debug_utils.h  gpdma.h  gps.h  swarm.h  swarm_tile.h  tim.h
Qube/Src/: NMEA.c  app_threadx.c  console.c  debug_menu_strings_en.c  debug_utils.c  gpdma.c  gps.c  main.c  stm32u5xx_it.c  swarm.c  swarm_tile.c  tim.c  usart.c
ST_Code/CMSIS_RTOS_V2/: cmsis_os2.c
